Changes in 3.3 :
- Cleanup plugin list (180402)
- If QM enabled, torrents are always managed by the QM, unless user stops them
- QM can now be disabled to allow full manual control of torrents

Changes in 3.2 :
- Use QDir to create directories, avoids nested event loops, which seems to be buggy in some situations (182327)
- Make sure strings tab is shown first in filter editor dialog
- Fix bug causing torrent to get stalled at startup in some rare situations
- Fix crash at exit

Changes in 3.2rc1 :
- Fix bug in webgui causing wrong content-length to be returned in some cases
- Add cmake check for libtaskmanager which is needed by the plasma applet
- Make sure ratio limit and seed time limit spinboxes in statustab only emit the valueChanged signal when the user is done editing the spinbox (175625)
- Don't show error message when torrent is loaded silently and the files can't be created (ported from stable)
- Fix crash in plasma applet
- Added select all action, manual announce now gets SHIFT + A as shortcut to not conflict with select all 
- Make sure average download speed calculation doesn't wrap around (175747)
- Update buttons when torrent changes status (174815)
- Fix pause button getting disabled when current view doesn't have any torrents (176442)
- Fix bug causing webseeds to prevent chunks from getting downloaded
- Make sure plasma applet restores it's geometry properly and remembers the current torrent
- Make sure initial log rotation doesn't show any progress dialogs
- Fix open in new tab action in search plugin
- Change meaning of active to transferring data
- Inactive groups become passive groups
- Fix bug causing queueingNotPossible message to be shown multiple times (176732)
- Make sure group policy is applied when drag and drop is used to add torrents to a group (176723)
- Make sure preview priority is not set on excluded or only seed files (176487)
- Make sure to long filenames are handled properly (175793)