@@ -140,6 +140,38 @@ namespace kt
 		QString dn = m_downloadLocation->url().path();
 		if (!dn.endsWith(bt::DirSeparator()))
 			dn += bt::DirSeparator();
+		
+		QString tld = tc->getUserModifiedFileName();
+		// If the move on completion is on, check completed dir for files of the torrent
+		if (Settings::useCompletedDir())
+		{
+			bool completed_files_found = false;
+			QStringList cf;
+			for (Uint32 i = 0;i < tc->getNumFiles();i++)
+			{
+				bt::TorrentFileInterface & file = tc->getTorrentFile(i);
+				QString path = Settings::completedDir().path() + bt::DirSeparator() + tld + bt::DirSeparator() + file.getUserModifiedPath();
+				if (bt::Exists(path))
+				{
+					completed_files_found = true;
+					cf.append(file.getUserModifiedPath());
+				}
+			}
+			
+			if (completed_files_found)
+			{
+				QString msg = i18n("Files of the torrent have been found in the completed downloads directory. "
+						"Do you want to use them, and download to the completed downloads directory ?");
+			// better ask the user if (s)he wants to delete the already existing data
+				int ret = KMessageBox::questionYesNoList(0,msg,cf,QString::null);
+				if (ret == KMessageBox::Yes)
+				{
+					dn = Settings::completedDir().path();
+					if (!dn.endsWith(bt::DirSeparator()))
+						dn += bt::DirSeparator();
+				}
+			}
+		}
 
 		if (!bt::Exists(dn))
 		{
@@ -158,8 +190,6 @@ namespace kt
 			}
 		}
 		
-		QString tld = tc->getUserModifiedFileName();
-
 		for (Uint32 i = 0;i < tc->getNumFiles();i++)
 		{
 			bt::TorrentFileInterface & file = tc->getTorrentFile(i);
